CRUD bug fixes - page layouts and styling

--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,4 +1,4 @@
-<div ng-controller="HomeController as vm">
+<div ng-controller="HomeController as vm" class="bodyColor">
 
   <form ng-submit="vm.contact()" style="padding: 90px">
     <p style="padding-bottom: 30px"> Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus,
