--- a/public/views/createforumPost.html
+++ b/public/views/createforumPost.html
@@ -1,4 +1,4 @@
-<div ng-controller="ForumController as vm">
+<div ng-controller="ForumController as vm" class="bodyColor">
   <form ng-submit="vm.createforumpost()" layout style="padding: 90px">
       <div>
        <md-input-container >
@@ -15,7 +15,8 @@
               <md-option value="General">General</md-option>
               <md-option value="Job Board"> Job Board </md-option>
               <md-option value="Interview Prep"> Interview Prep </md-option>
-              <md-option value="Projects"> Projects</md-option>
+              <md-option value="Projects"> Code Questions</md-option>
+              <md-option value="Projects"> Meetups </md-option>
               <md-option value="Bootcamp Reviews"> Bootcamp Reviews </md-option>
             </md-select>
           </md-input-container>
