--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<div ng-controller="HomeController as vm">
+<div ng-controller="HomeController as vm" class="bodyColor">
 
   <h5 style="text-align: center"> Home Page </h5>
 
