--- a/public/views/passwordReset.html
+++ b/public/views/passwordReset.html
@@ -1,6 +1,6 @@
 <!-- <div ng-controller='PassResetController as vm'> -->
 
-<form ng-submit="nav.resetPassword()">
+<form ng-submit="nav.resetPassword()" class="bodyColor">
 
 Please Choose your new password here
 	<div class="form-group">
