--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,4 +1,4 @@
-<div ng-controller="ProfileController as vm">
+<div ng-controller="ProfileController as vm" class="bodyColor">
   <!-- <script type="text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script> -->
 
 
@@ -11,7 +11,6 @@
 onchange="alert(event.fpfile.url)"> -->
 
 <!-- <div ng-controller="ProfilePostController as vm"> -->
-<content>
   <div layout layout-align="center" ng-show ='nav.status.name;'>
     <div flex="50">
       <form style="margin-top:50px;"ng-submit="vm.createPost();">
@@ -29,7 +28,6 @@ onchange="alert(event.fpfile.url)"> -->
 </form>
 </div>
 </div>
-</content>
 
 <md-content >
   <md-list>
@@ -37,8 +35,7 @@ onchange="alert(event.fpfile.url)"> -->
       <div class='md-list-item-text' layout-align="center center" style='text-align:center;padding:10px; padding-left:30px;margin-left:150px;margin-top:30px;'>
         <h5> Title: {{p.title}}</h5>
         <h5> Content: {{p.body}}</h5>
-        <h5> Created By: {{p.createdBy.name}}</h5>
-        <h5> Created On: {{p.date}}</h5>
+        <h5> Posted On: {{p.date}}</h5>
         <md-button type="button" class="md-raised" ng-hide='showEdit' ng-click='showEdit = true; vm.startEdit(p);'> Edit </md-button>
         <md-button type="button" class="md-raised" ng-hide='showEdit' ng-click="vm.deletePost(p._id)"> Delete </md-button>
       <form ng-show = 'showEdit' style="padding:30px; padding-top:100px" style='text-align:center' ng-submit='vm.editPost(p._id, vm.editingPost); showEdit = false;'>
