--- a/public/views/createforumPost.html
+++ b/public/views/createforumPost.html
@@ -1,12 +1,12 @@
 <div ng-controller="ForumController as vm" class="bodyColor">
-  <form ng-submit="vm.createforumpost()" layout style="padding: 90px">
-      <div>
+  <form ng-submit="vm.createforumpost()" style="padding: 90px">
+
        <md-input-container >
-          <label> Title</label>
+          <label> Post Title</label>
           <input required ng-model="vm.fpost.title"></input>
         </md-input-container>
         <md-input-container >
-          <label>Body </label>
+          <label> Content </label>
           <textarea ng-model="vm.fpost.body"></textarea>
         </md-input-container>
         <md-input-container layout-padding>
@@ -20,11 +20,10 @@
               <md-option value="Bootcamp Reviews"> Bootcamp Reviews </md-option>
             </md-select>
           </md-input-container>
-            <div layout="row" style="padding-top:50px">
+            <div layout style="padding-top:50px">
             <md-button type="submit" class="md-raised">Create</md-button>
             <md-button type="button" class="md-raised" ui-sref="Home">Cancel</md-button>
           </div>
-      </div>
     </form>
 
 </div>
