--- a/views/index.html
+++ b/views/index.html
@@ -16,17 +16,24 @@
 
 	<md-sidenav layout="column" class="md-sidenav-left bodyColor" md-component-id="left">
 		<md-toolbar class="md-medium-tall" style=" opacity:0.3; padding: 10px; background-color:#32B2B2;">
-			<!-- <h2 class="logo" style="text-align:center; padding-bottom: 20px;"> &#060;&nbsp;Coder Net&nbsp;&#062; </h2> -->
+			<div class="md-toolbar-tools">
+			<h2 class="logo" style="text-align: center">&#060;&nbsp;Coder Net&nbsp;&#062;</h2>
+			</div>
 		</md-toolbar>
-		<md-content layout="column" flex style="background-color: #fffdf0">
-			<div>
-				<ul hide-md show-gt-md>
-					<li> Something <li>
-						<li> Something <li>
-							<li> Something <li>
-								<li> Something <li>
-								</ul>
-							</div>
+		<md-content style="background-color: #fffdf0;">
+<md-list>
+						<md-list-item ng-click="nav.toggleSidenav()" ui-sref="About"> About Us </md-list-item>
+						<md-divider ></md-divider>
+						<md-list-item ng-click="nav.toggleSidenav()" ui-sref="Home"> Home Page </md-list-item>
+						<md-divider ></md-divider>
+						<div ng-show='nav.status.email;'>
+						<md-list-item  ng-click="nav.toggleSidenav()" ui-sref="Profile({id: nav.status._id})"> Profile </md-list-item>
+							<md-divider ></md-divider>
+						</div>
+							<md-list-item ng-click="nav.toggleSidenav()" ui-sref="Forums"> Forums </md-list-item>
+								<md-divider></md-divider>
+								<md-list-item ng-click="nav.toggleSidenav()" ui-sref="Contact"> Contact </md-list-item>
+								</md-list>
 		</md-content>
 	</md-sidenav>
 
