--- a/views/index.html
+++ b/views/index.html
@@ -76,6 +76,7 @@ onchange="alert(event.fpfile.url)"> -->
 
 	<!-- Ext Libs -->
 	<script src="angular/angular.min.js"></script>
+	<script src="//js.pusher.com/3.0/pusher.min.js"></script>
 	<script src="angular-socialshare/src/js/angular-socialshare.js"></script>
 	<script src="angular-ui-router/release/angular-ui-router.min.js"></script>
 
@@ -91,11 +92,13 @@ onchange="alert(event.fpfile.url)"> -->
 	<script src="/javascript/services/UserFactory.js"></script>
 	<script src="/javascript/services/ProfileFactory.js"></script>
 	<script src="/javascript/services/ForumFactory.js"></script>
+	<script src="/javascript/services/InboxFactory.js"></script>
 
 	<script src="/javascript/services/AuthInterceptor.js"></script>
 	<!-- Controllers -->
 	<script src="/javascript/controllers/HomeController.js"></script>
 	<script src="/javascript/controllers/PassResetController.js"></script>
+	<script src="/javascript/controllers/InboxController.js"></script>
 	<script src="/javascript/controllers/GlobalController.js"></script>
 	<script src="/javascript/controllers/ForumController.js"></script>
 	<script src="/javascript/controllers/ProfileController.js"></script>
