--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
 			</div>
 		</md-toolbar>
 		<md-content style="background-color: #fffdf0;">
-<md-list>
+					<md-list>
 						<md-list-item ng-click="nav.toggleSidenav()" ui-sref="About"> About Us </md-list-item>
 						<md-divider ></md-divider>
 						<md-list-item ng-click="nav.toggleSidenav()" ui-sref="Home"> Home Page </md-list-item>
@@ -33,7 +33,7 @@
 							<md-list-item ng-click="nav.toggleSidenav()" ui-sref="Forums"> Forums </md-list-item>
 								<md-divider></md-divider>
 								<md-list-item ng-click="nav.toggleSidenav()" ui-sref="Contact"> Contact </md-list-item>
-								</md-list>
+						</md-list>
 		</md-content>
 	</md-sidenav>
 
@@ -66,7 +66,7 @@
 			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
 			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-linkedin-box"></i></a>
 			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-twitter"></i></a>
-			<a class="list-group-item" href="https://github.com/devnetcc/DevNet" target="_blank"><i class="zmdi zmdi-github"></i></a>
+			<a class="list-group-item" href="https://github.com/devnetcc/Coder-Net" target="_blank"><i class="zmdi zmdi-github"></i></a>
 		</div>
 
 		<div class="footer-left">
