--- a/public/views/forumPost.html
+++ b/public/views/forumPost.html
@@ -20,6 +20,7 @@
 </div>
 <div ng-repeat="c in vm.comments">
   <h5>{{c.createdBy.name | firstLetterFilter}} {{c.createdBy.lastName | firstLetterFilter}}: </h5><h4>{{c.body | firstLetterFilter}}</h4>
+  <h5>{{c.date | dateFilter}}</h5>
   <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
 </div>
 </div>
