--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -1,9 +1,22 @@
 <div ng-controller="ProfileController as vm" class="bodyColor">
 <form ng-submit="vm.editProfile(vm.profile)" layout style="padding: 90px">
     <div>
+      
+      <!-- Pic Upload -->
       <md-input-container>
         <md-button required class="md-primary"ng-click="vm.uploadPic()">Upload a Photo</md-button>
-        <!-- dont know what type of input field we need for this -->
+      </md-input-container>
+
+      <!-- Change background color -->
+     <md-input-container flex="30" layout-padding>
+       <md-select ng-model="vm.profile.color" placeholder="Bkgrd Colors">
+       <md-option style="background-color: {{color}}" ng-value='color' ng-repeat="color in vm.colors">{{color}}</md-option>
+     </md-select>
+   </md-input-container>
+
+      <md-input-container>
+        <label>User Name</label>
+        <input required ng-model="vm.profile.userName">
       </md-input-container>
       <md-input-container>
         <label> First Name </label>
@@ -43,17 +56,19 @@
         <label> Where You're At  </label>
         <input  ng-model="vm.profile.userAt"></input>
       </md-input-container>
-      <md-input-container >
+
       <div layout="row" ng-repeat="a in vm.profile.languages" style="padding-left:6px;">
         <md-input-container >
-        <label> Languages </label>
-        <input  ng-model="vm.profile.languages[$index].lang"></input>
-      </md-input-container>
-           <label> Proficiency from 1 to 5 </label>
-        <input  ng-model="vm.profile.languages[$index].level"></input>
-      </md-input-container>
+          <label> Languages </label>
+          <input  ng-model="vm.profile.languages[$index].lang"></input>
+        </md-input-container>
+        <md-input-container >
+          <label> Proficiency from 1 to 5 </label>
+          <input  ng-model="vm.profile.languages[$index].level"></input>
+        </md-input-container>
               <md-button type="button" ng-click="vm.profile.languages.splice($index, 1)">X</md-button>
         </div>
+
         <div style="text-align:center">
           <md-button type="button" class="md-raised" ng-click="vm.profile.languages.push({});" bng-disabled="!vm.profile.languages.lang || !vm.profile.languages.level">Add Language</md-button>
         </div>
