--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,15 +1,22 @@
-<div ng-controller="ProfileController as vm" class="bodyColor">
+<div style="border:{{vm.profile.color}} 50px solid;padding-top:1px;margin-bottom:-80px;" ng-controller="ProfileController as vm" class="bodyColor">
+  <div style="background-color:white;">
   <!-- <script type="text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script> -->
 
-
+  <!-- <md-grid-tile ng-repeat="a in vm.communities" class="gridButton md-ink-ripple" ng-click="vm.goToCom(a._id)" style="background-color: {{a.color}};" > -->
   <h5 style="text-align: center"> Profile</h5>
 <div>
-<div style="height:225px;width:225px; background-color:#ffdb58; margin-left:50px;text-align:center;"><img style='max-width:100%; max-height:100%' src='{{vm.profile.pic}}'></div>
-<md-button class="md-raised" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button>
-<md-button class="md-raised" ng-click="nav.followOnProfile();">Follow</md-button><br>
-Followers: <a ui-sref="Followers({id: vm.profile._id})">{{vm.profile.followers.length}}</a><br>
-Following: <a ui-sref="Following({id: vm.profile._id})">{{vm.profile.following.length}}</a>
 
+  <div  >
+
+    <div style="height:225px;width:225px; background-color:#ffdb58; margin-left:50px;text-align:center;">
+      <img style='max-width:100%; max-height:100%' src='{{vm.profile.pic}}'>
+    </div>
+    <md-button class="md-raised" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button>
+    <md-button class="md-raised" ng-click="nav.followOnProfile();">Follow</md-button><br>
+    Followers: <a ui-sref="Followers({id: vm.profile._id})">{{vm.profile.followers.length}}</a><br>
+    Following: <a ui-sref="Following({id: vm.profile._id})">{{vm.profile.following.length}}</a>
+
+  </div>
 
 
 
@@ -37,7 +44,7 @@ onchange="alert(event.fpfile.url)"> -->
 
 
 
-<md-content >
+<md-content style="background-color:{{vm.profile.color}};">
   <md-list>
     <md-list-item ng-repeat='p in vm.profile.profilePosts'>
       <div class='md-list-item-text' style='padding:10px; padding-left:30px;margin-left:150px; margin-top:30px;'>
@@ -46,6 +53,7 @@ onchange="alert(event.fpfile.url)"> -->
         <h5> Posted On: {{p.date}}</h5>
         <md-button type="button" class="md-raised" ng-hide='showEdit' ng-click='showEdit = true; vm.startEdit(p);'> Edit </md-button>
         <md-button type="button" class="md-raised" ng-hide='showEdit' ng-click="vm.deletePost(p._id)"> Delete </md-button>
+        <hr style="width:400px">
       <form ng-show = 'showEdit' style="padding:30px;" ng-submit='vm.editPost(p._id, vm.editingPost); showEdit = false;'>
                 <md-input-container>
                   <label> Title </label>
@@ -62,5 +70,6 @@ onchange="alert(event.fpfile.url)"> -->
     </md-list-item>
   </md-list>
 </md-content>
+</div>
 </div>
 </div>
