--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -4,6 +4,10 @@
   <div ng-show="nav.isLogin" style="padding:100px">
     <form>
       <md-input-container>
+        <label>User Name</label>
+        <input type="text"  ng-model="nav.user.userName">
+      </md-input-container>
+      <md-input-container>
         <label>Email</label>
         <input type="email"  ng-model="nav.user.email">
       </md-input-container>
@@ -37,6 +41,10 @@
   <!-- Show the Register Form -->
   <div ng-show="!nav.isLogin"  style="padding:100px">
     <form>
+      <md-input-container>
+        <label>User Name</label>
+        <input ng-model="nav.user.userName">
+      </md-input-container>
       <md-input-container>
         <label>Name</label>
         <input ng-model="nav.user.name">
