badges + twitter oauth

--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -28,11 +28,12 @@
         <md-input-container layout-padding>
           <label> Role </label>
           <md-select ng-model="vm.profile.role">
-            <md-option value="Future Dev"> Future Dev </md-option>
+            <md-option value="Newbie"> Future Dev </md-option>
             <md-option value="Current Student"> Current Student </md-option>
             <md-option value="Recent Graduate"> Recent Graduate </md-option>
             <md-option value="Recruiter"> Recruiter </md-option>
-            <md-option value="Code Enthusiast"> Code Enthusiast </md-option>
+            <md-option value="Mentor"> Mentor </md-option>
+
           </md-select>
         </md-input-container>
        <md-input-container >
