--- a/public/views/inbox.html
+++ b/public/views/inbox.html
@@ -1,4 +1,4 @@
-<div  style="height:500px;"id='msgDiv'>
+<!-- <div  style="height:500px;"id='msgDiv'>
 	<div class="row">
 
   <div class="col-md-offset-2 col-md-8">
@@ -102,4 +102,4 @@
 
 
 </div>
-</div>
+</div> -->
