--- a/views/index.html
+++ b/views/index.html
@@ -108,13 +108,13 @@
 	<script src="/javascript/services/UserFactory.js"></script>
 	<script src="/javascript/services/ProfileFactory.js"></script>
 	<script src="/javascript/services/ForumFactory.js"></script>
-	<script src="/javascript/services/InboxFactory.js"></script>
+	<!-- <script src="/javascript/services/InboxFactory.js"></script> -->
 
 	<script src="/javascript/services/AuthInterceptor.js"></script>
 	<!-- Controllers -->
 	<script src="/javascript/controllers/HomeController.js"></script>
 	<script src="/javascript/controllers/PassResetController.js"></script>
-	<script src="/javascript/controllers/InboxController.js"></script>
+	<!-- <script src="/javascript/controllers/InboxController.js"></script> -->
 	<script src="/javascript/controllers/GlobalController.js"></script>
 	<script src="/javascript/controllers/ForumController.js"></script>
 	<script src="/javascript/controllers/ProfileController.js"></script>
