--- a/public/views/forum.html
+++ b/public/views/forum.html
@@ -1,6 +1,9 @@
 <div ng-controller="ForumController as vm" class="bodyColor">
 
 <h1 style="text-align:center"> Forum Channels </h1>
+<div style="text-align:center">
+<md-container><md-button class="md-primary"ui-sref="CreateForumPost">Create a Forum Post</md-button></md-container>
+</div>
 <!-- <div layout>
   <div flex="20" style="text-align:center;"><h2>Channels</h2></div>
 <div flex style="text-align:center;"><h2>Topics</h2></div>
