--- a/public/views/home.html
+++ b/public/views/home.html
@@ -26,7 +26,7 @@
 
 <md-content>
   <md-list style="padding-left: 70px">
-    <md-list-item ng-repeat='p in vm.allPosts'>
+    <md-list-item ng-repeat='p in vm.allPosts | orderBy:"-date"'>
       <div class='md-list-item-text' style='padding:10px; padding-left:30px'>
         <h2>  {{p.title}} </h2>
         <h4> {{p.body}} </h4>
