--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -1,7 +1,7 @@
 <div ng-controller="ProfileController as vm" class="bodyColor">
-<form ng-submit="vm.editProfile(vm.profile)" layout style="padding: 90px">
+<form  layout style="padding: 90px">
     <div>
-      
+
       <!-- Pic Upload -->
       <md-input-container>
         <md-button required class="md-primary"ng-click="vm.uploadPic()">Upload a Photo</md-button>
@@ -9,9 +9,15 @@
 
       <!-- Change background color -->
      <md-input-container flex="30" layout-padding>
+       <label>Profile Background Color</label>
        <md-select ng-model="vm.profile.color" placeholder="Bkgrd Colors">
        <md-option style="background-color: {{color}}" ng-value='color' ng-repeat="color in vm.colors">{{color}}</md-option>
      </md-select>
+   </md-input-container>
+
+   <md-input-container>
+     <label>Profile Tagline</label>
+     <input required ng-model="vm.profile.tagLine">
    </md-input-container>
 
       <md-input-container>
@@ -70,12 +76,31 @@
               <md-button type="button" ng-click="vm.profile.languages.splice($index, 1)">X</md-button>
         </div>
 
+           <!-- <md-button class="md-warn" ng-click='vm.showLinks()'>Click to display link on profile</md-button> -->
+        <md-input-container >
+          <input style="text-align:center;" type="text" ng-model='vm.profile.profileFBlink' placeholder="Enter Facebook Profile URL...">
+        </md-input-container>
+
+         <md-input-container>
+         <input style="text-align:center;"type="text" ng-model='vm.profile.profileLKlink' placeholder="Enter Linkedin Profile URL...">
+        </md-input-container>
+
+        <md-input-container>
+          <input style="text-align:center;" type="text" ng-model='vm.profile.profileTWlink' placeholder="Enter Twitter Profile URL...">
+        </md-input-container>
+
+        <md-input-container>
+          <input style="text-align:center;"type="text" ng-model='vm.profile.profileGHlink' placeholder="Enter Github Profile URL...">
+        </md-input-container><!-- -->
+
+
+
         <div style="text-align:center">
           <md-button type="button" class="md-raised" ng-click="vm.profile.languages.push({});" bng-disabled="!vm.profile.languages.lang || !vm.profile.languages.level">Add Language</md-button>
         </div>
 
           <div layout="row" style="padding-top:50px">
-          <md-button type="submit" class="md-raised"> Update Profile </md-button>
+          <md-button  ng-click="vm.editProfile(vm.profile)" class="md-raised"> Update Profile </md-button>
           <md-button type="button" class="md-raised" ui-sref="Profile({id: nav.status._id})"> Cancel</md-button>
           <md-button type="button" class="md-raised"> Reset Password </md-button>
           <md-button type="button" class="md-raised" ng-click="vm.deleteProfile(vm.profile)" > Delete Account </md-button>
