--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,20 +1,48 @@
 <div style="border:{{vm.profile.color}} 50px solid;padding-top:1px;margin-bottom:-80px;" ng-controller="ProfileController as vm" class="bodyColor">
-  <div style="background-color:white;">
+  <div style="background-color:white;padding-top:1px;">
 <!-- <div ng-controller="ProfileController as vm" class="bodyColor" style= "margin-left:150px; margin-right: 150px;"> -->
 
   <h5 style="text-align: center"> Profile</h5>
-<div>
 
-    <div style="height:225px;width:225px; background-color:#ffdb58; margin-left:50px;text-align:center;">
+  <div>
+        <!-- Profile Tagline -->
+    <h1 style="margin-left:50px;">{{vm.profile.tagLine}}</h3>
+    <div style="height:225px;width:225px;  margin-left:50px;text-align:center;">
       <img style='max-width:100%; max-height:100%' src='{{vm.profile.pic}}'>
     </div>
+
+    <!-- Personal Links -->
+  <div style="text-align:center;">
+  <!-- ----------------------------------------------------------------------------------------------- -->
+
+    <div layout row  style="margin-left:60px;margin-top:20px;margin-bottom:-40px;">
+    <div ng-show='vm.profile.profileFBlink'>
+      <a target='_blank'class="list-group-item" href="{{vm.profile.profileFBlink}}" target="_blank"><i class="zmdi zmdi-facebook" style="height:50px;width:50px;"></i></a></div>
+
+    <div ng-show='vm.profile.profileLKlink'>
+       <a target='_blank'class="list-group-item" href="{{vm.profile.profileLKlink}}" target="_blank"><i class="zmdi zmdi-linkedin-box" style="height:50px;width:50px;"></i></a></div>
+
+    <div ng-show='vm.profile.profileTWlink'>
+      <a target='_blank'class="list-group-item" href="{{vm.profile.profileTWlink}}" target="_blank"><i class="zmdi zmdi-twitter" style="height:50px;width:50px;"></i></a></div>
+
+    <div ng-show='vm.profile.profileGHlink'>
+      <a target='_blank'class="list-group-item" href="{{vm.profile.profileGHlink}}" target="_blank"><i class="zmdi zmdi-github" style="height:50px;width:50px;"></i></a></div>
+    </div>
+  </div>
+
+
+            <!-- Update profile -->
     <md-button class="md-raised" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button>
+
+                    <!-- Follow -->
     <md-button class="md-raised" ng-click="nav.followOnProfile();">Follow</md-button><br>
+    <md-button class="md-raised" ng-click="nav.unFollowProfile();">Un-Follow</md-button><br>
     <span style="padding-left:15px">Followers:</span> <a ui-sref="Followers({id: vm.profile._id})">{{vm.profile.followers.length}}</a><br>
     <span style="padding-left:15px">Following:</span> <a ui-sref="Following({id: vm.profile._id})">{{vm.profile.following.length}}</a>
 
-  </div>
+  </div> <!-- End of Profile display field -->
 
+        <!-- To Create a post -->
   <div layout layout-align="center" ng-show ='nav.status.name;'>
     <div flex="50">
       <form style="margin-top:50px;"ng-submit="vm.createPost();">
@@ -33,11 +61,11 @@
 </div>
 
 
-
+            <!-- Post Display and edit -->
 <md-content style="background-color:{{vm.profile.color}};">
   <md-list>
-    <md-list-item ng-repeat='p in vm.profile.profilePosts'>
-      <div class='md-list-item-text' style='padding:10px; padding-left:30px;margin-left:150px; margin-right: 150px; margin-top:30px;'>
+    <md-list-item ng-repeat='p in vm.profile.profilePosts | orderBy:"-date"'>
+      <div class='md-list-item-text' style='padding:10px; padding-left:30px;margin-left:150px; margin-right: 150px; margin-top:30px;background-color:white;height:185px;width:500px;'>
         <h3> Title: {{p.title}}</h3>
         <h5> Content: {{p.body}}</h5>
         <h6> Posted On: {{p.date}}</h6>
@@ -60,6 +88,5 @@
     </md-list-item>
   </md-list>
 </md-content>
-</div>
 </div>
 </div>
