--- a/public/views/forum.html
+++ b/public/views/forum.html
@@ -1,23 +1,22 @@
 <div ng-controller="ForumController as vm" class="bodyColor">
 
-<h1 style="text-align:center"> Forum Channels </h1>
-<div style="text-align:center">
-<md-container><md-button class="md-primary"ui-sref="CreateForumPost">Create a Forum Post</md-button></md-container>
-</div>
-<!-- <div layout>
-  <div flex="20" style="text-align:center;"><h2>Channels</h2></div>
-<div flex style="text-align:center;"><h2>Topics</h2></div>
-</div> -->
+  <h1 style="text-align:center"> Forum Channels </h1>
+  <div style="text-align:center">
+    <md-container>
+      <md-button class="md-primary" ui-sref="CreateForumPost">Create a Forum Post</md-button>
+    </md-container>
+  </div>
 
   <md-tabs class="md-primary">
-    <md-tab style="text-align:center; color:#32B2B2 margin:auto" ng-repeat="t in vm.topics" ng-click="vm.getPostsByTopic(t)" >
+    <md-tab style="text-align:center; color:#32B2B2 margin:auto" ng-repeat="t in vm.topics" ng-click="vm.getPostsByTopic(t)">
       <md-tab-label class="tabs"> {{t}} </md-tab-label>
       <md-tab-body>
-        <div layout="column" ng-repeat="p in vm.topicPosts" >
-              <div style="padding-left:60px"class="md-list-item-text" style="padding:10px;">
-                <h4 ui-sref="ForumPost({id: p._id})" >{{p.title | firstLetterFilter}}</h4> <h5>Posted by: {{p.createdBy.name | firstLetterFilter}} {{p.createdBy.lastName | firstLetterFilter}} on {{p.date | dateFilter}}</h5>
-              </div>
-              <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
+        <div layout="column" ng-repeat="p in vm.topicPosts">
+          <div style="padding-left:60px" class="md-list-item-text" style="padding:10px;">
+            <h4 ui-sref="ForumPost({id: p._id})">{{p.title | firstLetterFilter}}</h4>
+            <h5>Posted by: {{p.createdBy.name | firstLetterFilter}} {{p.createdBy.lastName | firstLetterFilter}} on {{p.date | dateFilter}}</h5>
+          </div>
+          <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
         </div>
       </md-tab-body>
     </md-tab>
