--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/angular-material/angular-material.css">
 	<link href='https://fonts.googleapis.com/css?family=Quicksand:700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
-  <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=entypo">
+	<link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=entypo">
 	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css'>
 	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css'>
 	<link rel="stylesheet" type="text/css" href="/css/site.css">
@@ -19,40 +19,38 @@
 	<md-sidenav layout="column" class="md-sidenav-left bodyColor" md-component-id="left">
 		<md-toolbar class="md-medium-tall" style=" opacity:0.3; padding: 10px; background-color:#32B2B2;">
 			<div class="md-toolbar-tools">
-			<h2 class="logo" style="text-align: center">&#060;&nbsp;Coder Net&nbsp;&#062;</h2>
+				<h2 class="logo">&#060;&nbsp;Coder Net&nbsp;&#062;</h2>
 			</div>
 		</md-toolbar>
-		<md-content style="background-color: #fffdf0;">
-					<md-list>
-						<md-list-item ng-click="nav.closeAndGo('About')" > About Us </md-list-item>
-						<md-divider ></md-divider>
-						<md-list-item ng-click="nav.closeAndGo('Home')" > Home Page </md-list-item>
-						<md-divider ></md-divider>
-						<div ng-show='nav.status.email;'>
-						<md-list-item  ng-click="nav.closeAndGo('Profile',nav.status._id)"> Profile </md-list-item>
-							<md-divider ></md-divider>
-						</div>
-							<md-list-item ng-click="nav.closeAndGo('Forums')"> Forums </md-list-item>
-								<md-divider></md-divider>
-								<md-list-item ng-click="nav.closeAndGo('Contact')" > Contact </md-list-item>
-						</md-list>
+		<md-content style="background-color: #dddfd4">
+			<md-list>
+				<md-list-item ng-click="nav.closeAndGo('About')"> About Us </md-list-item>
+				<md-divider></md-divider>
+				<md-list-item ng-click="nav.closeAndGo('Home')"> Home Page </md-list-item>
+				<md-divider></md-divider>
+				<div ng-show='nav.status.email;'>
+					<md-list-item ng-click="nav.closeAndGo('Profile',nav.status._id)"> Profile </md-list-item>
+					<md-divider></md-divider>
+				</div>
+				<md-list-item ng-click="nav.closeAndGo('Forums')"> Forums </md-list-item>
+				<md-divider></md-divider>
+				<md-list-item ng-click="nav.closeAndGo('Contact')"> Contact </md-list-item>
+			</md-list>
 		</md-content>
 	</md-sidenav>
 
 	<md-toolbar style=" background-color:#32B2B2;" layout>
-		<section layout flex layout-align="left" style="padding-left:23px">
-			<md-button class="zmdi zmdi-menu zmdi-hc-2x" ng-click="nav.toggleSidenav()" style="padding-top: 20px" aria-label="Toggle Menu">
-
+		<section layout flex layout-align="left">
+			<md-button class="zmdi zmdi-menu zmdi-hc-2x" ng-click="nav.toggleSidenav()" style="padding-top: 12px" aria-label="Toggle Menu">
 			</md-button>
-				<h1 class="logo" ui-sref="Home"> &#060;&nbsp;Coder Net&nbsp;&#062; </h1>
+			<h1 class="logo" ui-sref="Home"> &#060;&nbsp;Coder Net&nbsp;&#062; </h1>
 
 		</section>
 
 
-		<section layout layout-align="end end" >
+		<section layout layout-align="end end">
 
 			<md-button ui-sref="Profile({id: nav.status._id})" ng-show='nav.status.email;'> Welcome {{nav.status.name}} </md-button>
-
 			<md-button type='button' ng-click='nav.logout()' ng-show='nav.status.email;'> Logout </md-button>
 			<md-button type='button' ui-sref='RegLog' ng-show='!nav.status.email;'> Login/Register </md-button>
 		</section>
@@ -73,17 +71,13 @@
 		</div>
 
 		<div class="footer-left">
-	<h3 class="logo" > &#060;&nbsp;Coder Net&nbsp;&#062; </h3>
+			<h3 class="logo"> &#060;&nbsp;Coder Net&nbsp;&#062; </h3>
 
 			<p class="footer-links">
-				<a ui-sref="Home">Home</a>
-				|
-				<a ui-sref="Forum">Forum</a>
-				|
-				<a ui-sref="About">About</a>
-				|
-				<a ui-sref="Contact">Contact</a>
-				|
+				<a ui-sref="Home">Home</a> |
+				<a ui-sref="Forum">Forum</a> |
+				<a ui-sref="About">About</a> |
+				<a ui-sref="Contact">Contact</a> |
 				<a ui-sref="Terms">Terms of Service</a>
 			</p>
 
