--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -3,6 +3,10 @@
 <!-- <div ng-controller="ProfileController as vm" class="bodyColor" style= "margin-left:150px; margin-right: 150px;"> -->
 
   <h5 style="text-align: center"> Profile</h5>
+  <div style='float:right;margin-right:75px;margin-top:10px;'>
+    <h3 style="margin-left:25px">Ranking</h3>
+    <img src=' {{vm.profile.badge}}'>
+  </div>
 
   <div>
         <!-- Profile Tagline -->
@@ -59,6 +63,7 @@
 </form>
 </div>
 </div>
+
 
 
             <!-- Post Display and edit -->
